# mellivora-mind-studio

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  biome.json  docker-compose.dev.yml  docker-compose.yml  package.json  tsconfig.json  turbo.json
agents/data-agent/: Dockerfile  package.json
agents/data-agent/src/: index.ts
agents/monitor-agent/: Dockerfile  package.json
agents/monitor-agent/src/: index.ts
agents/plugin-agent/: Dockerfile  package.json
agents/plugin-agent/src/: index.ts
agents/trade-agent/: Dockerfile  package.json
agents/trade-agent/src/: index.ts
apps/mms-web-admin/: index.html  package.json
apps/mms-web-admin/src/: App.tsx
apps/mms-web-client/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/mms-web-client/src/: App.d.ts.map  App.jsx  App.jsx.map  App.tsx  index.css  index.d.ts.map  index.jsx  index.jsx.map  index.tsx  vite-env.d.ts
apps/mms-web-client/src/components/layout/: Footer.d.ts  Footer.d.ts.map  Footer.jsx  Footer.jsx.map  Footer.tsx  MainLayout.d.ts  MainLayout.d.ts.map  MainLayout.jsx  MainLayout.jsx.map  MainLayout.tsx  Navbar.d.ts  Navbar.d.ts.map  Navbar.jsx  Navbar.jsx.map  Navbar.tsx
apps/mms-web-client/src/layouts/: MainLayout.d.ts  MainLayout.d.ts.map  MainLayout.jsx  MainLayout.jsx.map  MainLayout.tsx
apps/mms-web-client/src/pages/: MarketsPage.d.ts  MarketsPage.d.ts.map  MarketsPage.jsx  MarketsPage.jsx.map  MarketsPage.tsx
compute/attribution/: Dockerfile  pyproject.toml
compute/attribution/src/: __init__.py  grpc_server.py
compute/backtest/: Dockerfile  pyproject.toml
compute/backtest/src/: __init__.py  grpc_server.py
compute/etl-engine/: Dockerfile  pyproject.toml
compute/etl-engine/src/: __init__.py  config.py  main.py
compute/etl-engine/src/db/: __init__.py  connection.py
compute/etl-engine/src/executor/: __init__.py  dag_executor.py  pipeline_executor.py  state_manager.py
compute/etl-engine/src/models/: __init__.py  etl_models.py
compute/etl-engine/src/plugins/: __init__.py  base.py  registry.py
compute/etl-engine/src/plugins/extract/: __init__.py  clickhouse_source.py  csv_source.py  postgres_source.py  tushare_source.py
compute/etl-engine/src/plugins/load/: __init__.py  clickhouse_target.py  csv_target.py  postgres_target.py
compute/etl-engine/src/plugins/transform/: __init__.py  aggregate_transform.py  dedupe_transform.py  filter_transform.py  join_transform.py  map_transform.py
compute/etl-engine/src/scheduler/: __init__.py  cron_scheduler.py
compute/optimize/: Dockerfile  pyproject.toml
compute/optimize/src/: __init__.py  grpc_server.py
compute/risk/: Dockerfile  pyproject.toml
compute/risk/src/: __init__.py  grpc_server.py
compute/signal/: Dockerfile  pyproject.toml
compute/signal/src/: __init__.py  grpc_server.py
core/: Cargo.toml
core/covariance/: Cargo.toml
core/covariance/src/: estimator.rs  factor.rs  lib.rs  matrix.rs
core/market-data/: Cargo.toml
core/market-data/src/: lib.rs  ohlcv.rs  snapshot.rs  tick.rs
core/optimizer-core/: Cargo.toml
core/optimizer-core/src/: constraints.rs  lib.rs  problem.rs  solver.rs
core/risk-engine/: Cargo.toml
core/risk-engine/src/: factor.rs  lib.rs  portfolio.rs
deploy/docker/: docker-compose.dev.yml  docker-compose.yml
docs/: ARCHITECTURE.md  MODULES.md  PLUGINS.md  PROJECT_STRUCTURE.md  README.md  TECH_STACK.md  TRADE_ANALYSIS.md  architecture.md  database.md  estimation.md  report_feature.md  requirements.md  tech_stack.md  ui_design_concept.md
etl-admin/: README.md  index.html  package-lock.json  package.json  vite.config.ts
etl-admin/src/: App.tsx
etl-admin/src/api/: client.ts  datasets.ts  datasources.ts  executions.ts  index.ts  pipelines.ts  schedules.ts
etl-admin/src/components/layout/: Header.tsx  Sidebar.tsx
etl-admin/src/components/ui/: index.ts
etl-admin/src/pages/: Dashboard.tsx
etl-admin/src/pages/datasets/: DataSetForm.tsx  index.tsx
etl-admin/src/pages/datasources/: DataSourceForm.tsx  index.tsx
etl-admin/src/pages/executions/: index.tsx
etl-admin/src/pages/pipelines/: index.tsx
etl-admin/src/pages/schedules/: index.tsx
etl-admin/src/types/: etl.ts
frontend/: index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/styles/: global.css
gateway/: Dockerfile  go.mod
gateway/cmd/gateway/: main.go
gateway/internal/config/: config.go
gateway/internal/handler/: handler.go
gateway/internal/middleware/: middleware.go
gateway/internal/router/: router.go
migrations/clickhouse/: 001_market_data.sql
migrations/postgres/: 001_init.sql  002_risk_and_signals.sql  003_scheduler_and_config.sql  004_etl_metadata.sql
proto/account/: account.proto
proto/common/: errors.proto  types.proto
proto/data/: data.proto
proto/order/: order.proto
proto/position/: position.proto
proto/risk/: risk.proto
proto/signal/: signal.proto
proto/trade/: trade.proto
scripts/: db-migrate.sh  dev.sh  init_etl_db.py  proto-gen.sh
services/account/: Dockerfile  go.mod
services/account/cmd/account/: main.go
services/alert/: Dockerfile  go.mod
services/alert/cmd/alert/: main.go
services/config/: Dockerfile  go.mod
services/config/cmd/config/: main.go
services/data/: Dockerfile  go.mod
services/data/cmd/data/: main.go
services/etl-config/: Dockerfile  go.mod  go.sum
services/etl-config/cmd/etl-config/: main.go
services/etl-config/internal/handler/: dataset.go  datasource.go  execution.go  pipeline.go  plugin.go  schedule.go
services/etl-config/internal/model/: models.go
services/etl-config/internal/repository/: dataset.go  datasource.go  db.go  execution.go  pipeline.go  plugin.go  schedule.go
services/order/: Dockerfile  go.mod
services/order/cmd/order/: main.go
services/position/: Dockerfile  go.mod
services/position/cmd/position/: main.go
services/schedule/: Dockerfile  go.mod
services/schedule/cmd/schedule/: main.go
services/trade/: Dockerfile  go.mod
services/trade/cmd/trade/: main.go
(+39 files in other folders)
