[workspace]
members = [
    "risk-engine",
    "market-data",
    "optimizer-core",
    "covariance",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mellivora Mind Studio Team"]
license = "Proprietary"
repository = "https://github.com/mellivora-mind/mellivora-mind-studio"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math/Linear algebra
nalgebra = "0.32"
ndarray = "0.15"
ndarray-linalg = "0.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# High-performance collections
dashmap = "5.5"
parking_lot = "0.12"

# Optimization
osqp = "0.6"
sprs = "0.11"

# Parallel computation
rayon = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Testing
criterion = "0.5"
proptest = "1.4"
