[package]
name = "covariance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
ndarray-linalg.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Parallel computation
rayon = "1.8"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[build-dependencies]
tonic-build.workspace = true

[[bench]]
name = "covariance_ops"
harness = false
