[package]
name = "risk-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[build-dependencies]
tonic-build.workspace = true

[[bench]]
name = "portfolio_risk"
harness = false
